Fixed clickthrough on modal (z-index hack due to react-table styles), added reactive MQ for stats table in modal

--- a/src/styles/components/Modal.css
+++ b/src/styles/components/Modal.css
@@ -8,6 +8,7 @@
   height: 100%;
   background: rgba(0,0,0,0.3);
   padding: 50;
+  z-index: 9999;
 }
 
 .modal-container {
@@ -22,12 +23,13 @@
   overflow: auto;
 }
 
-
 .modal-container button {
-  float: right;
+  position: relative;
   top: 5px;
+  left: 90%;
   margin: 5px 5px;
   border: 0;
   padding: 0;
   font-size: 24px;
+  z-index: 99999;
 }
