--- a/src/styles/components/UnitViewer.css
+++ b/src/styles/components/UnitViewer.css
@@ -40,8 +40,3 @@
 .TraitList {
   color: rgba(0, 0, 0, 0.65);
 }
-
-.StatsTable {
-  margin: 1em 0em;
-  table-layout: fixed;
-}
